<resources>
    <string name="app_name">Pamiętaj Wyrzuc.to</string>
    <string name="action_settings">Ustawienia</string>
    <string name="title_activity_settings">Ustawienia</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Ogólne</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_tytul_ulica">Ulica zamieszkania</string>
    <string name="pref_default_nazwa_ulicy">Długa</string>

    <string name="pref_tytul_ulica_numer">Numer ulicy</string>
    <string name="pref_default_numer_ulicy">1</string>

    <string name="pref_title_rodzaj_zabudowy">Rodzaj zabudowy</string>
    <string-array name="pref_list_zabudowa_rodzaj">
        <item>Zabudowa jednorodzinna</item>
        <item>Zabudowa wielolokalowa</item>
    </string-array>
    <string-array name="pref_list_values">
        <item>0</item>
        <item>1</item>
    </string-array>

    <string name="pref_title_dzielnica">Dzielnica zamieszkania</string>
    <string name="key_title_dzielnica">DZIELNICA</string>
    <string-array name="pref_list_dzielnica">
        <item>Wyspa Sobieszewska, Krakowiec-Górki Zachodnie, Rudniki, Olszynka, Orunia- Św.Wojciech-Lipce, Chełm, Wzgórze Mickiewicza</item>
        <item>Stogi, Przeróbka, Nowy Port, Letnica, Młyniska, Śródmieście</item>
        <item>Brzeźno, Wrzeszcz Dolny, Wrzeszcz Górny, Aniołki, Strzyża</item>
        <item>Przymorze Wielkie, Przymorze Małe, Zaspa Młyniec, Zaspa Rozstaje</item>
        <item>Żabianka-Wejhera-Jelitkowo-Tysiąclecia, Oliwa, Osowa, Matarnia, Kokoszki, Jasień</item>
        <item>VII Dwór, Brętowo, Piecki-Migowo, Suchanino, Siedlce, Ujeścisko-Łostowice</item>
    </string-array>
    <string-array name="pref_list_values_dzielnica">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Dane i  synchronizacja</string>

    <string name="pref_title_czas_przed_wystawka">Okres przed wystawką</string>
    <string-array name="pref_czas_przed_wystawka_title">
        <item>7 dni wcześniej</item>
        <item>6 dni wcześniej</item>
        <item>5 dni wcześniej</item>
        <item>4 dni wcześniej</item>
        <item>2 dni wcześniej</item>
        <item>dzien wcześniej</item>
        <item>W dzień wystawki</item>
    </string-array>
    <string-array name="pref_czas_przed_wystawka_values">
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>

    <string-array name="pref_czas_przed_smieci_title">
        <item>Dzien wcześniej</item>
        <item>W dzień wywozu śmieci</item>
    </string-array>
    <string-array name="pref_czas_przed_smieci_values">
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="pref_czas_przed_wystawka_defaultvalues"></string-array>


    <string name="pref_title_czas_przed_wywozem_suchych">Okres przed wywozem suchych</string>
    <string-array name="pref_czas_przed_wywozem_suchych_title">
        <item>7 dni wcześniej</item>
        <item>6 dni wcześniej</item>
        <item>5 dni wcześniej</item>
        <item>4 dni wcześniej</item>
        <item>2 dni wcześniej</item>
        <item>dzien wcześniej</item>
        <item>W dzień wystawki</item>
    </string-array>
    <string-array name="pref_czas_przed_wywozem_suchych_values">
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="pref_czas_przed_wywozem_suchych_defaultvalues"></string-array>


    <string name="pref_title_czas_przed_wywozem_mokrych">Okres przed wywozem mokrych</string>
    <string-array name="pref_czas_przed_wywozem_mokrych_title">
        <item>7 dni wcześniej</item>
        <item>6 dni wcześniej</item>
        <item>5 dni wcześniej</item>
        <item>4 dni wcześniej</item>
        <item>2 dni wcześniej</item>
        <item>dzien wcześniej</item>
        <item>W dzień wystawki</item>
    </string-array>
    <string-array name="pref_czas_przed_wywozem_mokrych_values">
        <item>7</item>
        <item>6</item>
        <item>5</item>
        <item>4</item>
        <item>2</item>
        <item>1</item>
        <item>0</item>
    </string-array>
    <string-array name="pref_czas_przed_wywozem_mokrych_defaultvalues"></string-array>
    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Powiadomienia</string>

    <string name="pref_title_wystawki">Powiadomienia o wystawkach</string>
    <string name="pref_title_wywoz_suche">Powiadomienia o wywozie suchych</string>
    <string name="pref_title_wywoz_mokre">Powiadomienia o wywozie mokrych</string>
    <string name="pref_title_wywoz_zmieszane">Powiadomienia o wywozie zmieszanych</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="title_activity_main_tab">Pamiętaj Wyrzuć.to</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="brakDanych">Brak danych</string>

</resources>
