<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="2"
        android:entries="@array/pref_list_dzielnica"
        android:entryValues="@array/pref_list_values_dzielnica"
        android:key="DZIELNICA"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_dzielnica" />


    <EditTextPreference
        android:capitalize="words"
        android:defaultValue="@string/pref_default_nazwa_ulicy"
        android:inputType="textCapWords"
        android:key="ULICA_NAZWA"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_tytul_ulica" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_numer_ulicy"
        android:inputType="number"
        android:key="ULICA_NUMER"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_tytul_ulica_numer" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:defaultValue="1"
        android:entries="@array/pref_list_zabudowa_rodzaj"
        android:entryValues="@array/pref_list_values"
        android:key="RODZAJ_ZABUDOWY"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_rodzaj_zabudowy" />

</PreferenceScreen>
