<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="POWIADOMIENIA_WYSTAWKI"
        android:title="@string/pref_title_wystawki" />

    <!-- Allows the user to choose a ringtone in the 'notification' category. -->
    <!-- NOTE: This preference will be enabled only when the checkbox above is checked. -->
    <!-- NOTE: RingtonePreference's summary should be set to its value by the activity code. -->

    <ListPreference
        android:defaultValue="7"
        android:entries="@array/pref_czas_przed_wystawka_title"
        android:entryValues="@array/pref_czas_przed_wystawka_values"
        android:key="POWIADOMIENIA_WYSTAWKI_CZAS"
        android:dependency="POWIADOMIENIA_WYSTAWKI"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_czas_przed_wystawka" />

    <MultiSelectListPreference
        android:title="@string/pref_title_czas_przed_wystawka"
        android:key="POWIADOMIENIA_WYSTAWKI_CZASS"
        android:dependency="POWIADOMIENIA_WYSTAWKI"
        android:entries="@array/pref_czas_przed_wystawka_title"
        android:entryValues="@array/pref_czas_przed_wystawka_values"
        android:defaultValue="@array/pref_czas_przed_wystawka_defaultvalues"
        android:dialogTitle="@string/pref_title_czas_przed_wystawka"
        >
    </MultiSelectListPreference>

    <SwitchPreference
        android:defaultValue="true"
        android:key="POWIADOMIENIA_WYWOZ_SUCHE"
        android:title="@string/pref_title_wywoz_suche" />
    <MultiSelectListPreference
        android:title="@string/pref_title_czas_przed_wywozem_suchych"
        android:key="POWIADOMIENIA_WYWOZ_SUCHE_CZAS"
        android:dependency="POWIADOMIENIA_WYWOZ_SUCHE"
        android:entries="@array/pref_czas_przed_wywozem_suchych_title"
        android:entryValues="@array/pref_czas_przed_wywozem_suchych_values"
        android:defaultValue="@array/pref_czas_przed_wywozem_suchych_defaultvalues"
        android:dialogTitle="@string/pref_title_czas_przed_wywozem_suchych"
        >
    </MultiSelectListPreference>

    <SwitchPreference
        android:defaultValue="true"
        android:key="POWIADOMIENIA_WYWOZ_MOKRE"
        android:title="@string/pref_title_wywoz_mokre" />
    <MultiSelectListPreference
        android:title="@string/pref_title_czas_przed_wywozem_mokrych"
        android:key="POWIADOMIENIA_WYWOZ_MOKRE_CZAS"
        android:dependency="POWIADOMIENIA_WYWOZ_MOKRE"
        android:entries="@array/pref_czas_przed_wywozem_mokrych_title"
        android:entryValues="@array/pref_czas_przed_wywozem_mokrych_values"
        android:defaultValue="@array/pref_czas_przed_wywozem_mokrych_defaultvalues"
        android:dialogTitle="@string/pref_title_czas_przed_wywozem_mokrych"
        >
    </MultiSelectListPreference>
</PreferenceScreen>
